turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:7: error: ':' expected but ')' found.
def setCouleurSol(Color) {
                       ^LangtonsAnt:10: error: identifier expected but '}' found.
}
^