turmites.lessons.turmites.langton.Langton.scala.code
def step() {
getCouleurSol();
if (Color=Color.white){
avance();
droite();	
				  }	 
def setCouleurSol(Color) {

}
}
